// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Geo Filters should return as expected no filters applied 2`] = `
Object {
  "results": Object {
    "facets": Array [
      Object {
        "display": "ListFacet",
        "identifier": "type",
        "label": "type",
      },
    ],
    "hits": Object {
      "items": Array [
        Object {
          "id": "tt0468569",
        },
        Object {
          "id": "tt0110912",
        },
        Object {
          "id": "tt0167260",
        },
        Object {
          "id": "tt0114369",
        },
        Object {
          "id": "tt0073486",
        },
        Object {
          "id": "tt0172495",
        },
        Object {
          "id": "tt1520211",
        },
        Object {
          "id": "tt0338013",
        },
        Object {
          "id": "tt0078788",
        },
        Object {
          "id": "tt0180093",
        },
      ],
    },
    "summary": Object {
      "appliedFilters": Array [],
    },
  },
}
`;

exports[`Geo Filters should return as expected one filter applied 2`] = `
Object {
  "results": Object {
    "facets": Array [
      Object {
        "display": "ListFacet",
        "identifier": "type",
        "label": "type",
      },
    ],
    "hits": Object {
      "items": Array [
        Object {
          "id": "tt0468569",
        },
        Object {
          "id": "tt0110912",
        },
        Object {
          "id": "tt0167260",
        },
        Object {
          "id": "tt0114369",
        },
        Object {
          "id": "tt0073486",
        },
        Object {
          "id": "tt0172495",
        },
        Object {
          "id": "tt1520211",
        },
        Object {
          "id": "tt0338013",
        },
        Object {
          "id": "tt0078788",
        },
        Object {
          "id": "tt0180093",
        },
      ],
    },
    "summary": Object {
      "appliedFilters": Array [
        Object {
          "display": "ListFacet",
          "id": "type_test",
          "identifier": "type",
          "label": "type",
        },
      ],
    },
  },
}
`;

exports[`Geo Filters should return as expected should return correct Results 2`] = `
Object {
  "results": Object {
    "facets": Array [
      Object {
        "display": "ListFacet",
        "identifier": "type",
        "label": "type",
      },
    ],
    "hits": Object {
      "items": Array [
        Object {
          "id": "tt0468569",
        },
        Object {
          "id": "tt0110912",
        },
        Object {
          "id": "tt0167260",
        },
        Object {
          "id": "tt0114369",
        },
        Object {
          "id": "tt0073486",
        },
        Object {
          "id": "tt0172495",
        },
        Object {
          "id": "tt1520211",
        },
        Object {
          "id": "tt0338013",
        },
        Object {
          "id": "tt0078788",
        },
        Object {
          "id": "tt0180093",
        },
      ],
    },
    "summary": Object {
      "appliedFilters": Array [
        Object {
          "bottomRight": Object {
            "lat": 40.01,
            "lon": -55.12,
          },
          "display": "GeoBoundingBoxFilter",
          "id": "location_{\\"topLeft\\":{\\"lat\\":50.73,\\"lon\\":-75.1},\\"bottomRight\\":{\\"lat\\":40.01,\\"lon\\":-55.12}}",
          "identifier": "location",
          "label": "Location",
          "topLeft": Object {
            "lat": 50.73,
            "lon": -75.1,
          },
        },
      ],
    },
  },
}
`;
